log

Mon 11 Mar 2024 05:07:43 PM UTC: 
 tests:  0|7
total_score: 0/70
2deb2bb
Mon 11 Mar 2024 05:15:49 PM UTC: 
 exercises.c | 16 +++++++++++++++-
 1 file changed, 15 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c:14:1: error: expected identifier or ‘(’ before ‘for’
   14 | for (int i = 0; i < size; i++)
      | ^~~
exercises.c:14:19: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘<’ token
   14 | for (int i = 0; i < size; i++)
      |                   ^
exercises.c:14:28: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘++’ token
   14 | for (int i = 0; i < size; i++)
      |                            ^~
Compilation failed
d8522f5
Mon 11 Mar 2024 05:17:15 PM UTC: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
test.c: In function ‘findMax’:
test.c:382:5: error: ‘main’ is normally a non-static function [-Werror=main]
  382 | int main(int argc, char *argv[]) {
      |     ^~~~
test.c:410:1: error: expected declaration or statement at end of input
  410 | }
      | ^
test.c:7:6: error: unused variable ‘msg’ [-Werror=unused-variable]
    7 | char msg[300];
      |      ^~~
test.c:411: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:382:5: error: ‘main’ defined but not used [-Werror=unused-function]
  382 | int main(int argc, char *argv[]) {
      |     ^~~~
test.c:47:6: error: ‘readIntArray’ defined but not used [-Werror=unused-function]
   47 | void readIntArray(int arr[], int *size) {
      |      ^~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
7e351f1
Mon 11 Mar 2024 05:23:16 PM UTC: 
 exercises.c | 11 ++++-------
 1 file changed, 4 insertions(+), 7 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘findMax’:
exercises.c:20:26: error: expected statement before ‘)’ token
   20 |         if (arr[i] > max))
      |                          ^
test.c:382:5: error: ‘main’ is normally a non-static function [-Werror=main]
  382 | int main(int argc, char *argv[]) {
      |     ^~~~
test.c:410:1: error: expected declaration or statement at end of input
  410 | }
      | ^
test.c:7:6: error: unused variable ‘msg’ [-Werror=unused-variable]
    7 | char msg[300];
      |      ^~~
test.c:411: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:382:5: error: ‘main’ defined but not used [-Werror=unused-function]
  382 | int main(int argc, char *argv[]) {
      |     ^~~~
test.c:47:6: error: ‘readIntArray’ defined but not used [-Werror=unused-function]
   47 | void readIntArray(int arr[], int *size) {
      |      ^~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
6c8b542
Mon 11 Mar 2024 05:24:48 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
test.c: In function ‘findMax’:
test.c:382:5: error: ‘main’ is normally a non-static function [-Werror=main]
  382 | int main(int argc, char *argv[]) {
      |     ^~~~
test.c:410:1: error: expected declaration or statement at end of input
  410 | }
      | ^
test.c:7:6: error: unused variable ‘msg’ [-Werror=unused-variable]
    7 | char msg[300];
      |      ^~~
test.c:411: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:382:5: error: ‘main’ defined but not used [-Werror=unused-function]
  382 | int main(int argc, char *argv[]) {
      |     ^~~~
test.c:47:6: error: ‘readIntArray’ defined but not used [-Werror=unused-function]
   47 | void readIntArray(int arr[], int *size) {
      |      ^~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
74b2149
Mon 11 Mar 2024 05:41:46 PM UTC: 
 exercises.c | 29 +++++++++++++----------------
 1 file changed, 13 insertions(+), 16 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:23:12: error: expected identifier or ‘(’ before ‘=’ token
   23 |   for (int = 0; i < size / 2; i++)
      |            ^
exercises.c:23:17: error: ‘i’ undeclared (first use in this function)
   23 |   for (int = 0; i < size / 2; i++)
      |                 ^
exercises.c:23:17: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
5fb5a1d
Mon 11 Mar 2024 05:42:13 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
0a8cf6f
Mon 11 Mar 2024 05:44:05 PM UTC: 
 exercises.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
217a8cf
Mon 11 Mar 2024 05:46:16 PM UTC: 
 exercises.c | 14 ++++++++------
 1 file changed, 8 insertions(+), 6 deletions(-)
 tests:  0|6
total_score: 10/70
31e8bb2
Mon 11 Mar 2024 05:46:33 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|5
total_score: 20/70
3acf140
Mon 11 Mar 2024 05:46:49 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
335d8ec
Mon 11 Mar 2024 05:55:54 PM UTC: 
 exercises.c | 17 ++++++++++++++++-
 1 file changed, 16 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
f2b76b5
Mon 11 Mar 2024 05:58:48 PM UTC: 
 exercises.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  0|4
total_score: 30/70
58b4d76
Wed 13 Mar 2024 01:39:59 AM UTC: 
 exercises.c | 30 +++++++++++++++++++++++++++++-
 1 file changed, 29 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘mergeSortedArrays’:
exercises.c:74:33: error: ‘size’ undeclared (first use in this function); did you mean ‘size2’?
   74 |   int *nuevoArr = (int *)malloc(size * sizeof(int));
      |                                 ^~~~
      |                                 size2
exercises.c:74:33: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
36bb9e7
Wed 13 Mar 2024 01:40:25 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|3
total_score: 40/70
c15bab4
Wed 13 Mar 2024 05:15:15 PM UTC: 
 exercises.c | 21 ++++++++++++++++++++-
 1 file changed, 20 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘checkSorted’:
exercises.c:113:56: error: expected ‘]’ before ‘)’ token
  113 |       if (arr[i] > arr[i + 1 || arr[i + 1] < arr[i + 2])
      |                                                        ^
      |                                                        ]
Compilation failed
613c5d3
Wed 13 Mar 2024 05:15:26 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|3
total_score: 40/70
e40bce1
